private/styl/play.styl
body
  overflow hidden

.accessToken
  display none

.dragging
  list-style none
  display: none
  position:absolute
  z-index:10000000000
  background-color blue
  cursor pointer
  margin-bottom 5px
  padding 10px 10px
  min-height 60px
  img
    width 50px
    height 50px
    float right
  span.name
    color white
    position relative
    top 15px
    width 80%
    float left

.overlay
  font-family 'Oswald', 'sans-serif'
  pointer-events none
  z-index 1000
  overlayPadding = 20px
  .profileArea
    top 0
    right 10px
    padding overlayPadding
    .name
      color white
      float left
      margin-right 12px
      margin-top 15px
    .photo
      width 50px
      height 50px
      float right
      border solid #fffcc4 2px
  .playlistArea
    pointer-events auto
    position absolute
    height 70%
    top 65px
    right 0px
    padding 0
    margin-top 35px

    .playlistButton
      &:hover
        .char
          color blue
      color white
      cursor pointer
      background-color darkGray
      padding 7px
      border-radius 5px
      float left
      height 100%
      width 18px
      .playlistBody
        overflow-y scroll
        overflow-x hidden
        display none
        width 100%
        height 100%
        ul.likedSongs
          height 100%
          li.song
            &:hover
              background-color blue
            cursor pointer
            margin-bottom 5px
            padding 10px 10px
            min-height 60px
            img
              width 50px
              height 50px
              float right
            span.name
              color white
              position relative
              top 15px
              width 80%
              float left

          
      .char
        font-size 35px
        position absolute
        top 49%

  .logo
    top 0
    left 0
    padding overlayPadding
    width 120px
  ul.friends
    bottom 0px
    width 100%
    height 80px
    text-align center
    .friend
      &:hover
        .slideArea
          bottom 100px
          .songName
            opacity 1
      position relative
      cursor pointer
      pointer-events auto
      width 100px
      height 100px
      display inline-block
      margin 0 10px
      .slideArea
        margin-left -148px
        width 400px
        z-index -1
        transition bottom 0.4s linear
        position absolute
        bottom 20px
        .songName
          transition opacity 0.4s linear
          opacity 0
          text-align center
          color #fffcc4
        img.albumPhoto
          width 90px
          height 90px
          margin 5px
          border solid #fffcc4 2px
      img.profilePhoto
        z-index 1000
        height 65px
        width 65px
        border solid #fffcc4 2px


  .profileArea, .logo, ul.friends
    position absolute
.underlay
  font-family 'Oswald', 'sans-serif'
  background-color gray
  text-align center
  .wave
    position absolute
    height 500px
    top 50%
    margin-top -250px
    .svg
      width 100%
      height 100%

  > .centerContent
    position relative
    background-color darkGray
    display inline-block
    width 600px
    height 100%
    margin 0 auto
    arrowWidth = 60px
    .arrow
      &:hover
        opacity 0.5
      transition opacity 0.2s linear
      position relative
      height 100%
      z-index 100
      width arrowWidth
      color beige
      cursor pointer
      charWidth = 25px
      font-size charWidth
      charPadding = 10px
      &.left
        background-color red
        float left
      &.right
        background-color blue
        float right
      .char
        width 100%
        position absolute
        font-size 60px
        top 50%
        height 10px
        margin-top -5px
    #song-title
      margin-top 30px
      margin-left 20%
      margin-right 20%
      color white
      width 60%
    #song-author
      margin-top 10px
      color white
      a
        color red
    .photo
      margin 0 auto
      photoSize = 400px
      width photoSize
      height photoSize
      margin-top 30px
.overlay, .underlay
  height 100%
  width 100%
  position absolute

.flyAway
  position absolute
  display none
  height 100%
  top 0
  left 0
  z-index 500000000
  .centerContent
    background-color none
    display inline-block
    width 600px
    z-index 100
    height 100%
    margin 0 auto
    height 100%
    position absolute
    arrowWidth = 60px

.progress {
  width: 400px;
  margin: 0 auto;
  position: absolute; 
  left 16%
  top 485px
}

.progressjs-inner {
  height: 8px!important;
}

.progressjs-theme-blue .progressjs-inner {
  background-color: rgb(58, 139, 145)!important;
}

.stopped.photo {
  opacity: 0.3;
  z-index: 100000;
}

@-webkit-keyframes fadeIn {
  0% {opacity: 0;}
  20% {opacity: 1;}
  33% {opacity: 1;}
  53% {opacity: 0;}
  100% {opacity: 0;}
}

.artwork {
  /*opacity: 0.5;*/
  -webkit-animation-name: fadeIn;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-duration: 6s;
  animation-name: fadeIn;
  animation-iteration-count: infinite;
  animation-duration: 6s;
}

.wave
  position relative
  height 50%
  stroke rgba(218, 55, 53, 0.45)
  stroke-width 0.35
  width 100%
  z-index 0
  /*margin-top -500px*/

.waveForm-play
  position absolute
  fill none
  left 0px

